objects/Call_Report__c.object
<CustomObject>
    <fields>
        <fullName>Accountable_Banker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adviser Network</fullName>
                </value>
                <value>
                    <fullName>Asset Consultants</fullName>
                </value>
                <value>
                    <fullName>Bank Tied Agents</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Brokerage Allan Gray</fullName>
                </value>
                <value>
                    <fullName>Brokerage FINSOLNET</fullName>
                </value>
                <value>
                    <fullName>Insurance Tied Agents</fullName>
                </value>
                <value>
                    <fullName>Investment Committee</fullName>
                </value>
                <value>
                    <fullName>IFA</fullName>
                </value>
                <value>
                    <fullName>LISP</fullName>
                </value>
                <value>
                    <fullName>Manager Of Money</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_conduct_risk_points_discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a compulsory field to flag whether the call report had any relevance to Conduct Risks. Conduct Risk is defined as: The risk associated with inappropriate judgment in the execution of our business activities that causes detriment to our customers, clients, counterparts or Absa. The focus of Conduct Risk is to ensure that our customers interests and our impact on markets are taken into account in all our business decisions and activities.</description>
        <inlineHelpText>The focus of Conduct Risk is to ensure that our customers interests and our impact on markets are taken into account in all our business decisions and activities.</inlineHelpText>
        <label>Any conduct risk points discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_there_any_changes_to_the_Client__c</fullName>
        <description>Changes to the Organisation will require the client to provide updated supporting documentation</description>
        <label>Are there changes to the Organisation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_to_meeting__c</fullName>
        <inlineHelpText>Explain where the meeting originated from, who reached out to who.  Indicate whether there has been any prior contact leading up to this meeting</inlineHelpText>
        <label>Background to meeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Capture_Lag__c</fullName>
        <formula>DATEVALUE( CreatedDate ) -Meeting_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Capture Lag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from the Call Report object to the Contact object</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Report_Co_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>On Research Call Report layout only</description>
        <label>Call Report Co-owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Report_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Report URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>You can link an existing Client Plan to retrieve some fields for the Briefing Note (Company overview, opportunities, ...)</inlineHelpText>
        <label>Client Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Client_Plan__c.Relationship__c</field>
                <operation>equals</operation>
                <valueField>$Source.Relationship__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conduct_Risk_Catagory__c</fullName>
        <label>Conduct Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Any_conduct_risk_points_discussed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Authorisations and Permissions</fullName>
                </value>
                <value>
                    <fullName>Strategy and Business Model</fullName>
                </value>
                <value>
                    <fullName>Governance and Culture</fullName>
                </value>
                <value>
                    <fullName>Product Design</fullName>
                </value>
                <value>
                    <fullName>Transaction Servicing</fullName>
                </value>
                <value>
                    <fullName>Customer Servicing</fullName>
                </value>
                <value>
                    <fullName>Reputational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>CR_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_email__c</fullName>
        <formula>CR_Contact__r.Email</formula>
        <label>Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Default agenda for meetings</description>
        <inlineHelpText>1. Background to meeting

2. Objectives of meeting

3. Key messages for discussion

4. Key messages from the meeting

5. Feedback</inlineHelpText>
        <label>Meeting Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>I_have_attended__c</fullName>
        <label>I have attended</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifier_Type__c</fullName>
        <description>Discussion Topics Identifier Type for Research Call Reports</description>
        <label>Identifier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bloomberg Ticker</fullName>
                </value>
                <value>
                    <fullName>Reuters Ticker</fullName>
                </value>
                <value>
                    <fullName>ISIN</fullName>
                </value>
                <value>
                    <fullName>CUSIP</fullName>
                </value>
                <value>
                    <fullName>FIGI</fullName>
                </value>
                <value>
                    <fullName>SEDOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identifier_Value__c</fullName>
        <description>Discussion Topics Identifier Value for Research Call Reports</description>
        <label>Identifier Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Discussion Topics Industry for Research Call Reports</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consumer Discretionary</fullName>
                </value>
                <value>
                    <fullName>Consumer Staples</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Industrials</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_messages_to_discussion__c</fullName>
        <inlineHelpText>What are the key messages MR should get across to the client/s. Provide as much information as is necessary to support each of the key messages</inlineHelpText>
        <label>Key messages to discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Duration__c</fullName>
        <label>Meeting Duration (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Reason2__c</fullName>
        <label>Meeting Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Review</fullName>
                </value>
                <value>
                    <fullName>Client Acquisition</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Existing Facility / Opportunity</fullName>
                </value>
                <value>
                    <fullName>Introduction</fullName>
                </value>
                <value>
                    <fullName>New Facility / Opportunity</fullName>
                </value>
                <value>
                    <fullName>New Product Discussion</fullName>
                </value>
                <value>
                    <fullName>Origination</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Road Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Reason__c</fullName>
        <label>Other Meeting Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Review</fullName>
                </value>
                <value>
                    <fullName>Client Acquisition</fullName>
                </value>
                <value>
                    <fullName>Existing Facility / Opportunity</fullName>
                </value>
                <value>
                    <fullName>New Facility / Opportunity</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Introduction</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Road Show</fullName>
                </value>
                <value>
                    <fullName>New Product Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Identified_Proposed_Solutions__c</fullName>
        <label>Other Needs/Proposed Solutions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_signed_off_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Note signed off by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerUkId__c</fullName>
        <formula>Owner:User.UK_Barclays_User_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerUkId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Business_Area__c</fullName>
        <formula>TEXT (Owner:User.Business_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Business Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Division__c</fullName>
        <formula>TEXT (Owner:User.Division__c)</formula>
        <label>Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Hub__c</fullName>
        <formula>TEXT (Owner:User.Hub__c)</formula>
        <label>Owner Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_s_email__c</fullName>
        <label>Owner Manager&apos;s email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Senior_Sponsor__c</fullName>
        <formula>$User.Senior_Sponsor__c</formula>
        <label>Owner - Senior Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>TEXT (Owner:User.Team__c )</formula>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Team_Role__c</fullName>
        <formula>TEXT (Owner:User.Team_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Team Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_1_Contact_email__c</fullName>
        <formula>Participant_Co_1_Contact__r.Email</formula>
        <label>Participant Co 1 Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Co_1_Contact_Phone__c</fullName>
        <formula>Participant_Co_1_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Co 1 Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Co_1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of representative from Participant Company on Research Call Report</description>
        <inlineHelpText>If the Contact does not exist, please create the new Contact to link here</inlineHelpText>
        <label>Participant Co 1 Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <infoMessage>Participant Company 2 Contact: Account Name IDEQUALSCall Report: Participant Company 2 ID</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Reports (Participant Contact 1)</relationshipLabel>
        <relationshipName>Call_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Co_2_Contact_Phone__c</fullName>
        <formula>Participant_Company_2_Contact__r.Phone</formula>
        <label>Participant Co 2 Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Co_2_Contact_email__c</fullName>
        <formula>Participant_Company_2_Contact__r.Email</formula>
        <label>Participant Co 2 Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Co_3_Contact_Phone__c</fullName>
        <formula>Participant_Co_3_Contact__r.Phone</formula>
        <label>Participant Co 3 Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Co_3_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Co 3 Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Participant_Company_3__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Reports (Participant Co 3 Contact)</relationshipLabel>
        <relationshipName>Call_Reports3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Co_3_Contact_email__c</fullName>
        <formula>Participant_Co_3_Contact__r.Email</formula>
        <label>Participant Co 3 Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Co_4_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Co 4 Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Reports (Participant Co 4 Contact)</relationshipLabel>
        <relationshipName>Call_Reports4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Co_4_Contact_email__c</fullName>
        <formula>Participant_Co_4_Contact__r.Email</formula>
        <label>Participant Co 4 Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Company_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Participant Company Name</description>
        <inlineHelpText>If the Relationship Group does not exist, please create a Prospect Relationship</inlineHelpText>
        <label>Participant Company 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Relationship Group, Prospect</value>
            </filterItems>
            <infoMessage>if the Company does not exist, please create a Prospect</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Reports (Participant Company 1)</relationshipLabel>
        <relationshipName>Call_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Company_2_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Co 2 Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Reports (Participant Company 2 Contact)</relationshipLabel>
        <relationshipName>Call_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Company_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Company 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Relationship Group, Prospect</value>
            </filterItems>
            <infoMessage>If the Relationship Group does not exist, please create a Prospect</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Reports (Participant Company 2)</relationshipLabel>
        <relationshipName>Call_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Company_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Company 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Reports (Participant Company 3)</relationshipLabel>
        <relationshipName>Call_Reports3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 2</label>
        <referenceTo>Product_Level_2__c</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Level 3</label>
        <referenceTo>Product_Level_3__c</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Wealth__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>FX</fullName>
                </value>
                <value>
                    <fullName>AWI</fullName>
                </value>
                <value>
                    <fullName>SSG</fullName>
                </value>
                <value>
                    <fullName>Deposits</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Stock Broking</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <description>Product level 1 list + Markets list</description>
        <inlineHelpText>Product level 1 &amp; Markets products</inlineHelpText>
        <label>Proposed Solution(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSA Financial Services</fullName>
                </value>
                <value>
                    <fullName>Actuaries &amp; Consultants</fullName>
                </value>
                <value>
                    <fullName>AFM (ALI)</fullName>
                </value>
                <value>
                    <fullName>Alternative Asset Management</fullName>
                </value>
                <value>
                    <fullName>Annual Payer Income and Growth</fullName>
                </value>
                <value>
                    <fullName>Autocalls</fullName>
                </value>
                <value>
                    <fullName>Barx</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
                <value>
                    <fullName>BII</fullName>
                </value>
                <value>
                    <fullName>BI - ICM</fullName>
                </value>
                <value>
                    <fullName>BI – ICM International Banking</fullName>
                </value>
                <value>
                    <fullName>Call &amp; Fixed deposit (TPFM)</fullName>
                </value>
                <value>
                    <fullName>Card Acquiring</fullName>
                </value>
                <value>
                    <fullName>Card - Card Acquiring</fullName>
                </value>
                <value>
                    <fullName>Card - Card Issuing</fullName>
                </value>
                <value>
                    <fullName>Card Issuing</fullName>
                </value>
                <value>
                    <fullName>Cash - Deposits</fullName>
                </value>
                <value>
                    <fullName>Cash - Electronic Banking</fullName>
                </value>
                <value>
                    <fullName>Cash - Manual Transactions</fullName>
                </value>
                <value>
                    <fullName>Cash - Mobile</fullName>
                </value>
                <value>
                    <fullName>Cash - Working Capital</fullName>
                </value>
                <value>
                    <fullName>CIS (AAM)</fullName>
                </value>
                <value>
                    <fullName>CIS (ABAM)</fullName>
                </value>
                <value>
                    <fullName>CIS (AMM)</fullName>
                </value>
                <value>
                    <fullName>Commercial Asset Finance</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Finance</fullName>
                </value>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Corporate Money Markets Deposits</fullName>
                </value>
                <value>
                    <fullName>Current Account Deposit</fullName>
                </value>
                <value>
                    <fullName>Current Account Overdraft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Group_Client_CIF__c</fullName>
        <formula>Related_Group_Client__r.CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Group Client CIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Group_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subsidiary Client of Relationship Group</description>
        <inlineHelpText>Please select only Clients belonging to the Relationship Group. The subsidiary Client must be linked to the Relationship Group before it can be selected.</inlineHelpText>
        <label>Related Group Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select only Clients belonging to the Relationship Group</errorMessage>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Relationship__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Reports (Related Group Client)</relationshipLabel>
        <relationshipName>Client_Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipOwnerRoleName__c</fullName>
        <label>Relationship Owner Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Group_Segment__c</fullName>
        <formula>TEXT(Relationship__r.Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Group Segment</label>
        <type>Text</type>
    </fields>
</CustomObject>